# railguard

./: .gitignore  CMakeLists.txt  README.md
data/: delays.csv  generate_data.py  routes.csv  stations.csv  trains.csv
src/: main.cpp
src/analytics/: PassengerImpact.cpp  PassengerImpact.h  SlidingWindow.cpp  SlidingWindow.h
src/cascade/: DSUWithRollback.cpp  DSUWithRollback.h  DelayDAG.cpp  DelayDAG.h
src/graph/: NetworkGraph.cpp  NetworkGraph.h  TarjanBridge.cpp  TarjanBridge.h
src/intervention/: InterventionOptimizer.cpp  InterventionOptimizer.h  SpragueGrundy.cpp  SpragueGrundy.h
src/io/: CSVParser.cpp  CSVParser.h  NTESFeedSimulator.cpp  NTESFeedSimulator.h
tests/: test_cascade.cpp  test_dsu.cpp  test_sprague.cpp  test_tarjan.cpp
visualizer/: dashboard.py
